# Fastapi_Projeto_De_Estudos

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1309e3ec5551_criando_tabela_contas_a_pagar_e_receber.py  32791bb92018_criar_tabela_de_contas_a_pager_e_receber.py  72026491799c_criar_tabela_de_fornecedor_e_cliente.py  8c6a166030cf_adicionando_colunas_de_controle_na_.py  c1f7461814c3_criando_tabela_fornecedor.py  ffa7b9429c8c_criando_tabela_com_chave_estrangeira_de_.py
src/api/models/: db_models.py
src/api/router/: contas_pagar_receber.py
src/api/router/test/contas_a_pagar_e_receber/routers/: test_contas_pagar_receber_router.py
src/domain/: conection.py  exceptions.py  exceptions_handler.py
src/models/: __init__.py  contas_pg_models.py  db_models.py  fornecedor_cliente_models.py
src/router/: contas_pagar_receber.py  contas_pagar_receber.router.py  contas_pagar_receber_router.py  forncedor_cliente_router.py  fornecedor_cliente_router.py  fornecedor_conta_router.py
src/test/contas_a_pagar_e_receber/routers/: test_contas_pagar_receber_router.py
test/domain/: test_connection.py
test/routers/: test_conta_por_fornecedor_router.py  test_contas_pagar_receber_router.py  test_forncedor_cliente_router.py
